fixed Robot Friend h1 from getting stuck in animation

--- a/my-css-robot/style.css
+++ b/my-css-robot/style.css
@@ -8,6 +8,11 @@ h1 {
 	color: #FFD3B5;
 }
 
+h1:hover {
+	transition: .5s;
+	transform: scale(3);
+}
+
 .robots {
 }
 
@@ -18,7 +23,7 @@ h1 {
 .left_leg, 
 .right_leg {
 	 background-color: #5f93e8;
-	 transition: 0.5s;
+	 transition: 0.7s;
 }
 
 .head { 
@@ -32,6 +37,7 @@ h1 {
 .eyes {
 	
 }
+
 
 .head:hover {
 	width: 300px;
